--- a/Frontend/src/app/inventry-list/inventry-list.component.html
+++ b/Frontend/src/app/inventry-list/inventry-list.component.html
@@ -99,7 +99,7 @@
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         <div class="form-actions">
-          <button (click)="createInventory()" class="btn btn-success" title="">Add</button>
+          <button (click)="createInventory()" class="btn btn-success" data-dismiss="modal" title="">Add</button>
         </div>
       </div>
 
